# EpamCodeMPlus

./: .clang-format  .gitignore  Benchmark.py  CMakeLists.txt  ReadMe.md  conanfile.py  messages.proto
App/: CMakeLists.txt  async_tcp_echo_server.cpp  chat_server.cpp  echo_server.cpp  refactored_echo_server.cpp  reference_counted.cpp
Clone/: CMakeLists.txt
Clone/Clone.App/: CMakeLists.txt  Direcror.cpp  Direcror.hpp  Director.cpp  Director.hpp  Frame.hpp  IPCDriver.hpp  Package.hpp  ShM1.cpp  ShM2.cpp  Startup.hpp  Strurtup.hpp  Utils.hpp  WorkerFactory.cpp  WorkerFactory.hpp  iWorker.hpp  main.cpp
Clone/Clone.App/Workers/: ByteStreamWorker.hpp  IPCWorker.hpp  WorkerFactory.cpp  WorkerFactory.hpp  Workers.h  iWorker.hpp
Clone/Core/: AbstractWorkerFactory.hpp  ByteStreamWorker.hpp  CMakeLists.txt  IPCWorker.hpp  WorkerFactory.cpp  WorkerFactory.hpp  iWorker.hpp
Clone/Core/Common/: Configuration.hpp  Frame.hpp  SafeDeque.hpp  Utils.hpp
Clone/Core/Workers/: ByteStreamWorker.hpp  IPCWorker.hpp  NetworkWorker.hpp  Workers.h
Clone/test/: Benchmark.cpp  CMakeLists.txt
Src/: CMakeLists.txt
Src/Clone.App/: CMakeLists.txt  Startup.hpp  main.cpp
Src/Core/: CMakeLists.txt  WorkerFactory.cpp  WorkerFactory.hpp
Src/Core/Common/: Configuration.hpp  Frame.hpp  IPCFrame.hpp  SafeDeque.hpp  Utils.hpp
Src/Core/Factories/: AbstractWorkerFactory.hpp  BytestreamWorkerFactory.cpp  BytestreamWorkerFactory.hpp  IPCWorkerFactory.cpp  IPCWorkerFactory.hpp  NetworkWorkerFactory.cpp  NetworkWorkerFactory.hpp
Src/Core/Messages/: CMakeLists.txt  MessageUtils.hpp  messages.pb.cc  messages.pb.h  messages.proto
Src/Core/TransportLayer/: Connection.hpp  Criptography.cpp  Criptography.hpp  DlManager.hpp  Downloader.cpp  Downloader.hpp  TCPAcceptor.hpp  TCPTransportLayer.hpp  TransportLayer.hpp  Uploader.cpp  Uploader.hpp  iTransportLayer.hpp
Src/Core/Workers/: ByteStreamWorker.hpp  IPCWorker.hpp  NetworkWorker.hpp  Workers.h  iWorker.hpp
Test/: CMakeLists.txt  TestUtils.hpp  Tests.cpp
cmake/: ConanModule.cmake  Protobuf.cmake
